--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <string name="app_name">Snowball Messaging</string>
-    <string name="hello_world">Hello world!</string>
+    
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">Push Notifications</string>
     <string name="error_config">Please set the %1$s constant and recompile the app.</string>
@@ -12,25 +12,34 @@
     <string name="gcm_error">From GCM: error (%1$s).</string>
     <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
     <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
-    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
-    <string name="server_registered">From Messaging Server Server: successfully added device!</string>
-    <string name="server_unregistered">From Messaging Server Server: successfully removed device!</string>
-    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
-    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
+    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Messaging Server.</string>
+    <string name="server_registered">From Messaging Server: successfully added device!</string>
+    <string name="server_unregistered">From Messaging Server: successfully removed device!</string>
+    <string name="server_register_error">Could not register device on Messaging Server after %1$d attempts.</string>
+    <string name="server_unregister_error">Could not unregister device on Messaging Server (%1$s).</string>
     <string name="options_register">Register</string>
     <string name="options_unregister">Unregister</string>
     <string name="options_clear">Clear</string>
     <string name="options_exit">Exit</string>
     
-    <string name="hello">Hello World, Task!</string>
+    <string name="no_tasks">There are no tasks</string>
     
-    <string name="no_tasks">Currently there are no Task items maintained</string>
-    <string name="menu_insert">Add Item</string>
     <string name="menu_delete">Delete Task</string>
     <string name="task_summary">Summary</string>
     <string name="task_description">Delete Task</string>
-    <string name="task_edit_summary">Summary</string>
-    <string name="task_edit_description">Description</string>
-    <string name="task_edit_confirm">Confirm</string>
+    
+    <string name="task_edit_department">Site Survey</string>
+    <string name="task_edit_summary">Location</string>
+    <string name="task_edit_description">Client</string>    
+    
+    <string name="task_button_start">Start</string>
+    <string name="task_button_stop">Finish</string>
+    <string name="task_button_on_hold">Put on hold</string>    
+    
+    <string name="task_start">Started</string>
+    <string name="task_finish">Finshed</string>
+    <string name="task_time">Time Spent</string>
+    <string name="task_not_started_yet">No started yet</string>
+    <string name="task_na">N/A</string>
 
 </resources>
