--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,14 @@
 <resources>
-
-    <string name="app_name">Snowball Messaging</string>
     
-    <string name="menu_settings">Settings</string>
+    <!-- 
     <string name="title_activity_main">Push Notifications</string>
+    <string name="options_register">Register</string>
+    <string name="options_unregister">Unregister</string>
+    <string name="options_clear">Clear</string>
+    <string name="options_exit">Exit</string>
+     -->
+
+    <string name="app_name">Snowball</string>    
     <string name="error_config">Please set the %1$s constant and recompile the app.</string>
     <string name="already_registered">Device is already registered on server.</string>
     <string name="gcm_registered">From GCM: device successfully registered!</string>
@@ -16,13 +21,25 @@
     <string name="server_registered">From Messaging Server: successfully added device!</string>
     <string name="server_unregistered">From Messaging Server: successfully removed device!</string>
     <string name="server_register_error">Could not register device on Messaging Server after %1$d attempts.</string>
-    <string name="server_unregister_error">Could not unregister device on Messaging Server (%1$s).</string>
-    <string name="options_register">Register</string>
-    <string name="options_unregister">Unregister</string>
-    <string name="options_clear">Clear</string>
-    <string name="options_exit">Exit</string>
-    
+    <string name="server_unregister_error">Could not unregister device on Messaging Server (%1$s).</string>    
+     
     <string name="no_tasks">There are no tasks</string>
+    
+    <string name="menu_settings">Settings</string>
+    <string name="menu_delete_all">Delete All</string>
+    <string name="menu_unregister">Unregister</string>
+    
+    <string name="pref_server_url_summary">Enter the server URL</string>
+    <string name="pref_server_url_title">Server URL</string>
+    <string name="pref_server_url_default">http://www.example.com/whmcs/messaging</string>
+    
+    <string name="pref_device_name_summary">Enter your device ame</string>
+    <string name="pref_device_name_title">Device name</string>
+    <string name="pref_device_name_default">My Android Phone</string>        
+    
+    <string name="register_device_name">Device Name:</string>
+    <string name="register_email">Email:</string>
+    <string name="register_register">Register</string>
     
     <string name="menu_delete">Delete Task</string>
     <string name="task_summary">Summary</string>
@@ -40,6 +57,6 @@
     <string name="task_finish">Finshed</string>
     <string name="task_time">Time Spent</string>
     <string name="task_not_started_yet">No started yet</string>
-    <string name="task_na">N/A</string>
+    <string name="task_na">-</string>
 
 </resources>
