--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,11 +23,13 @@
     <string name="server_register_error">Could not register device on Messaging Server after %1$d attempts.</string>
     <string name="server_unregister_error">Could not unregister device on Messaging Server (%1$s).</string>    
      
-    <string name="no_tasks">There are no tasks</string>
+    <string name="no_tasks">No items</string>
     
-    <string name="menu_settings">Settings</string>
-    <string name="menu_delete_all">Delete All</string>
-    <string name="menu_unregister">Unregister</string>
+    <string name="main_menu_settings">Settings</string>
+    <string name="main_menu_delete_all">Delete All</string>
+    <string name="main_menu_unregister">Unregister</string>
+    
+    <string name="list_menu_map">Map</string>
     
     <string name="pref_server_url_summary">Enter the server URL</string>
     <string name="pref_server_url_title">Server URL</string>
@@ -41,13 +43,19 @@
     <string name="register_email">Email:</string>
     <string name="register_register">Register</string>
     
-    <string name="menu_delete">Delete Task</string>
+    <string name="context_menu_list_call">Call</string>
     <string name="task_summary">Summary</string>
     <string name="task_description">Delete Task</string>
     
     <string name="task_edit_department">Site Survey</string>
     <string name="task_edit_summary">Location</string>
-    <string name="task_edit_description">Client</string>    
+    <string name="task_edit_description">Client</string>
+    
+    <string name="task_row_icon">Icon</string>
+    <string name="task_row_department">Site Survey</string>
+    <string name="task_row_start">Fri 20 05:00</string>
+    <string name="task_row_city">Stellenbosch</string>
+    <string name="task_row_client_name">Eugene van der Merwe</string>
     
     <string name="task_button_start">Start</string>
     <string name="task_button_stop">Finish</string>
