Doing major commit after a few days, also selected a bunch of files that were not selected before. At this stage we have tab and lists and detail and a half working app. Working on registration is still broken and preferences lacking. We don't have a proper model yet as well.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -33,7 +33,7 @@
     
     <string name="pref_server_url_summary">Enter the server URL</string>
     <string name="pref_server_url_title">Server URL</string>
-    <string name="pref_server_url_default">http://www.example.com/whmcs/messaging</string>
+    <string name="pref_server_url_default">http://196.201.6.235/whmcs</string>
     
     <string name="pref_device_name_summary">Enter your device ame</string>
     <string name="pref_device_name_title">Device name</string>
